src/objects/Cluster__c.object
<CustomObject>
    <description>Allows organizations to group content based on any criteria (geographical regions, countries, persona types) and apply governance through the hierarchy (ex. define a global banner for all countries using the same community).</description>
    <fields>
        <fullName>ClusterLandingUrl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>URL to redirect</description>
        <label>Landing URL</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Clusters</relationshipLabel>
        <relationshipName>Clusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClusterLevel__c</fullName>
        <description>Represents the level of the cluster on the &quot;tree&quot;</description>
        <formula>IF(ISBLANK(ParentCluster__c)
,1
,IF(ISBLANK(ParentCluster__r.ParentCluster__c)
,2
,IF(ISBLANK(ParentCluster__r.ParentCluster__r.ParentCluster__c)
,3
,4
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the level of the cluster on the &quot;tree&quot;</inlineHelpText>
        <label>Cluster Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClusterRootExternalId__c</fullName>
        <formula>if(RecordType.DeveloperName = &apos;ClusterRoot&apos;, ExternalId__c, &apos;&apos;) 
+
if(ParentCluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, ParentCluster__r.ExternalId__c, &apos;&apos;) 
+ 
if(ParentCluster__r.ParentCluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, ParentCluster__r.ParentCluster__r.ExternalId__c, &apos;&apos;) 
+ 
if(ParentCluster__r.ParentCluster__r.ParentCluster__r.RecordType.DeveloperName = &apos;ClusterRoot&apos;, ParentCluster__r.ParentCluster__r.ParentCluster__r.ExternalId__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Root External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityName__c</fullName>
        <label>Community Name</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CommunityURL__c</fullName>
        <description>Must be the corresponding URL of the Salesforce Community.</description>
        <inlineHelpText>Must be the corresponding URL of the Salesforce Community.</inlineHelpText>
        <label>Community URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DefaultLanguage__c</fullName>
        <label>Default Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AvailableLanguages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</inlineHelpText>
        <label>External Id</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CommunityPreviewDomain__c</fullName>
        <description></description>
        <inlineHelpText></inlineHelpText>
        <label>Community Preview Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappingClusterField__c</fullName>
        <defaultValue>&quot;DefaultLanguage__c&quot;</defaultValue>
        <description>Represents the field in the Cluster that will be use to match with the &quot;Mapping Object Field&quot;. By default is the Default Language field.</description>
        <inlineHelpText>Represents the field in the Cluster that will be use to match with the &quot;Mapping Object Field&quot;. By default is the Default Language field.</inlineHelpText>
        <label>Mapping Cluster Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappingObjectField__c</fullName>
        <defaultValue>&quot;LanguageLocaleKey&quot;</defaultValue>
        <description>Represents the field within the object defined in &quot;Mapping Object&quot; that will be use to match with the &quot;Mapping Cluster Field&quot;. By default is the Language field in the User object.</description>
        <inlineHelpText>Represents the field within the object defined in &quot;Mapping Object&quot; that will be use to match with the Cluster &quot;Mapping Value&quot;. By default is the Language field in the User object.</inlineHelpText>
        <label>Mapping Object Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MappingObject__c</fullName>
        <description>Represents the object that will determine the cluster leaf to be used in the community. By default is the User object but it can be extended to other objects.</description>
        <inlineHelpText>Represents the object that will determine the cluster leaf to be used in the community. By default is the User object but it can be extended to other objects.</inlineHelpText>
        <label>Mapping Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OtherLanguages__c</fullName>
        <description>Languages that Content Admins will be able to translate and community users can select in the community. For Cluster Groups, you need to select all languages defined below the hierarchy.</description>
        <inlineHelpText>Languages that Content Admins will be able to translate and community users can select in the community. For Cluster Groups, you need to select all languages defined below the hierarchy.</inlineHelpText>
        <label>Other Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AvailableLanguages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentCluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Cluster</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>- Parent Cluster record can only be of Group or Root type.
- Cluster Root cannot have a Parent Cluster.</errorMessage>
            <filterItems>
                <field>Cluster__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Cluster Group, Cluster Root</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Cluster Root</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Related Clusters</relationshipLabel>
        <relationshipName>RelatedClusters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicGroupRODownName__c</fullName>
        <description>There is a one to one relationship between cluster and public group RO Down in order to manage cluster governance. This field stores the public group RO Down name related to the cluster.</description>
        <inlineHelpText>There is a one to one relationship between cluster and public group RO Down in order to manage cluster governance. This field stores the public group RO Down name related to the cluster.</inlineHelpText>
        <label>Public Group RO Down Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicGroupROUpName__c</fullName>
        <description>There is a one to one relationship between cluster and public group RO Up in order to manage cluster governance. This field stores the public group RO Up name related to the cluster.</description>
        <inlineHelpText>There is a one to one relationship between cluster and public group RO Up in order to manage cluster governance. This field stores the public group RO Up name related to the cluster.</inlineHelpText>
        <label>Public Group RO Up Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicGroupRWName__c</fullName>
        <description>There is a one to one relationship between cluster and public group RW in order to manage cluster governance. This field stores the public group RW name related to the cluster.</description>
        <inlineHelpText>There is a one to one relationship between cluster and public group RW in order to manage cluster governance. This field stores the public group RW name related to the cluster.</inlineHelpText>
        <label>Public Group RW Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Cluster</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ParentCluster__c</columns>
        <columns>DefaultLanguage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Groups</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>ParentCluster__c</columns>
        <columns>DefaultLanguage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.ClusterGroup</value>
        </filters>
        <label>Groups</label>
    </listViews>
    <listViews>
        <fullName>Leafs</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>ParentCluster__c</columns>
        <columns>DefaultLanguage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.ClusterLeaf</value>
        </filters>
        <label>Leafs</label>
    </listViews>
    <listViews>
        <fullName>Roots</fullName>
        <columns>NAME</columns>
        <columns>ExternalId__c</columns>
        <columns>CommunityName__c</columns>
        <columns>CommunityURL__c</columns>
        <columns>DefaultLanguage__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Cluster__c.ClusterRoot</value>
        </filters>
        <label>Roots</label>
    </listViews>
    <nameField>
        <label>Cluster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clusters</pluralLabel>
    <recordTypes>
        <fullName>ClusterGroup</fullName>
        <active>true</active>
        <description>Represents a grouping cluster of other grouping clusters or cluster leafs. (Ex.: EMEA, Africa, Latam).</description>
        <label>Cluster Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>ClusterLeaf</fullName>
        <active>true</active>
        <description>Represents the lowest level of the clustering tree. Community users will be related to this cluster level. (Ex.: Argentina Consumers)</description>
        <label>Cluster Leaf</label>
    </recordTypes>
    <recordTypes>
        <fullName>ClusterRoot</fullName>
        <active>true</active>
        <description>Represents the highest level of the clustering tree or the only cluster applicable for a community. (Ex. Global)</description>
        <label>Cluster Root</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Clustering__c</fullName>
        <label>Clustering</label>
    </sharingReasons>
    <validationRules>
        <fullName>Avoid_Circular_References</fullName>
        <active>true</active>
        <description>Assure that child clusters don´t become parent of their parents</description>
        <errorConditionFormula>AND(RecordType.DeveloperName == &quot;ClusterGroup&quot;,NOT( OR(ParentCluster__r.RecordType.DeveloperName == &quot;ClusterRoot&quot;, ParentCluster__r.ParentCluster__r.RecordType.DeveloperName == &quot;ClusterRoot&quot;)))</errorConditionFormula>
        <errorMessage>Cluster tree must begin with a Root cluster (Avoid circular references)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cluster_Level_Must_Be_4_Or_Less</fullName>
        <active>true</active>
        <description>Cluster Depth Level Must Be Less Or Equat to 4</description>
        <errorConditionFormula>AND( RecordType.DeveloperName &lt;&gt; &quot;ClusterRoot&quot;, ParentCluster__r.ClusterLevel__c &gt; 3)</errorConditionFormula>
        <errorMessage>Maximum depth of cluster levels is four. With this parent cluster you are exceding the threshold</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Leaf_Cluster_Must_Have_Parent_Cluster</fullName>
        <active>true</active>
        <description>Every Leaf cluster requieres a Parent Cluster</description>
        <errorConditionFormula>AND( RecordType.DeveloperName == &quot;ClusterLeaf&quot;,ISBLANK( ParentCluster__c ))</errorConditionFormula>
        <errorMessage>A Leaf Cluster requires a Parent Cluster</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Root_Cluster_Dont_Allow_Parent_Cluster</fullName>
        <active>true</active>
        <description>Root clusters must not have parent clusters</description>
        <errorConditionFormula>AND(RecordType.DeveloperName == &quot;ClusterRoot&quot;,  NOT(ISBLANK(ParentCluster__c  ) ) )</errorConditionFormula>
        <errorMessage>Root type cluster shouldn´t have parent cluster</errorMessage>
    </validationRules>
</CustomObject>